# magnotether-pi-fits

./: .gitignore  README.md  pyproject.toml
examples/: ensemble_fit_pi_controller.py  fit_p_controller.py  fit_pi_controller.py
magnotether_pi_fits/: models.py  p_controller.py  pi_controller.py  utility.py
